# XSQL

./: CMakeLists.txt  MySQL.xml  main.cpp
BaseTools/: Logger.h  StringUtils.cpp  StringUtils.h  TSingleton.h
Common/: TVarList.h
Depends/tinyxml/: tinyxml.cpp
src/: DataConnector.cpp  DataConnector.h  DataProvider.cpp  DataProvider.h  DataQuery.cpp  DataQuery.h  IDataProvider.h  XSqlLoader.cpp  XSqlLoader.h
